@@ -8,6 +8,7 @@ import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,15 +17,15 @@ import java.util.List;
  * с помощью класса Random или руками прописать разные значения переменных).
  * Потом получившийся список записать в один и тот же файл 10 раз (100 раз и более, если у вас это происходит очень быстро).
  * Список и объекты внутри лучше копировать, чтобы у вас не было ссылок на одни и те же объекты.
- *
+ * <p>
  * Далее этот список надо прочитать из файла.
- *
+ * <p>
  * Результатом теста должно быть следующее: размер файла, время записи и время чтения.
  * Время считать через System.currentTimeMillis().
  * В итоговом пулРеквесте должна быть информация об этих значениях для каждого теста. (всего 2 теста,
  * за правильную генерацию данных 1 тугрик, 1 тугрик за каждый тест и 1 тугрик за правильное объяснение результатов)
  * Для тестов создайте классы в соответствующем пакете в папке тестов. Используйте другие тесты как примеры.
- *
+ * <p>
  * В конце теста по чтению данных, не забывайте удалять файлы
  */
 public class StructureSerializer {
@@ -32,15 +33,15 @@ public class StructureSerializer {
     /**
      * 1 тугрик
      * Реализовать простую сериализацию, с помощью специального потока для сериализации объектов
+     *
      * @param structures Список структур для сериализации
-     * @param fileName файл в который "пишем" структуры
+     * @param fileName   файл в который "пишем" структуры
      */
     public static void defaultSerialize(List<Structure> structures, String fileName) throws IOException {
-        List<Structure> structureList = new ArrayList<>(structures);
         try (ObjectOutputStream outputStream =
                      new ObjectOutputStream(Files.newOutputStream(Paths.get(fileName)))) {
 
-            for (Structure structure : structureList) {
+            for (Structure structure : structures) {
                 outputStream.writeObject(structure);
             }
         }
@@ -58,8 +59,7 @@ public class StructureSerializer {
 
         try (ObjectInputStream inputStream =
                      new ObjectInputStream(Files.newInputStream(Paths.get(fileName)))) {
-
-            while (inputStream.available() == 0) {
+            while (true) {
                 try {
                     structures.add((Structure) inputStream.readObject());
                 } catch (EOFException e) {
@@ -75,8 +75,9 @@ public class StructureSerializer {
     /**
      * 1 тугрик
      * Реализовать сериализацию, с помощью StructureOutputStream
+     *
      * @param structures Список структур для сериализации
-     * @param fileName файл в который "пишем" структуры
+     * @param fileName   файл в который "пишем" структуры
      */
     public static void serialize(List<Structure> structures, String fileName) throws IOException {
         try (StructureOutputStream outputStream = new StructureOutputStream(Paths.get(fileName).toFile())) {
@@ -96,7 +97,7 @@ public class StructureSerializer {
 
         try (StructureInputStream structureInputStream = new StructureInputStream(Paths.get(fileName).toFile())) {
             while (structureInputStream.available() != 0) {
-                structures = List.of(structureInputStream.readStructures());
+                structures = Arrays.asList(structureInputStream.readStructures());
             }
         }
 
